﻿
10/3/2017:
* FIX: fixes to type annotations etc. that made HML work


3/3/2017:
* UP: several upgrades at UnitTester system for scoring warnings and hints
* FIX: unit tests fixed and ALL working - including HML - except section "Higher Rank"


1/3/2017:
* UP: UnitTester supports new flag Dependencies


28/2/2017:
* Submitted a paper on Lw for ICFP 2017: "Ejecting Records and Injecting Constraints"
* RAFACT: Interactive renamed to Console


24/10/2016:
* REFACT: UnitTester flags for dealing with hints and warnings have been renamed from Disable/Enable to Hide/Show
* FIX: several unit tests have been polished and return now success instead of weak success due to hints


12/7/2016:
* FIX: warning and hint csets are checked correctly in UnitTester now


6/7/2016:
* UP: few improvements in cset management
* UP: UnitTest module now support custom tests consisting in arbitrary pieces of code, aimed at testing specific internals not related to language constructs


30/6/2016:
* REFACT: Report.Alert.cset extended with set operations and moved to FSharp.Common.Collections


29/6/2016:
* UP: cset type represents complement-able sets (was vset)
* REFACT: UnitTester rewritten according to new cset system for dealing with alerts (hints and warnings)


21/6/2016:
* UP: unit test internals furtherly improved: scores and infs population is cleaner now and multiple results for each entry are supported (success, weak issue or errors)


17/6/2016:
* UP: UnitTest internals revamped: now each entry computes a list of (score * msg) tuples, which are then sorted according to severity and the final
      result is the worst in the list


13/6/2016:
* UP: flag manegement in UnitTest revamped even more: it now supports checking whether warnings and hints actually take place, via
      a special scope-tracer object which can track warnings or hints shot while type-checking 


10/6/2016:
* UP: UnitTest flags for warning and hint manipulation have been extended and tested


8-9/6/2016: